Code smell fix
Code smell fix